# nc-cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
docs/: changelog-v3.1.md  json-output.md
examples/: env.example
tests/: test_nc_cli.py
